--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,20 @@ img{
     outline:none;
 }
 
-
+.showcase::before,
+.showcase::after{
+    content:'';
+    position:absolute;
+    height:100px;
+    bottom:-70px;
+    right:0;
+    left:0;
+    background: #fff;
+    transform:skewY(-5deg);
+    --webkit-transform:skewY(-5deg);
+    -moz-transform:skewY(-5deg);
+    -ms-transform:skewY(-5deg);
+}
 
 /***********Utilities*************************/
 .container{
