--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 
 :root{
     --primary-color:#047aed;
+    --secondary-color:#1c3fa8;
+    --dark-color:#002240;
+    --light-color:#f4f4f4;
 }
 
 
@@ -149,6 +152,23 @@ img{
     font-size:20px;
     font-weight:bold;
 }
+
+/*************Cli***************************/
+.cli .grid{
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.cli .grid >*:first-child{
+    grid-column: 1/ span 2;
+    grid-row: 1/ span 2;
+}
+
+/*****************Cloud**************************/
+.cloud .grid{
+    grid-template-columns: 4fr 3fr;
+
+}
 /***********Utilities*************************/
 .container{
     max-width: 1100px;
@@ -197,6 +217,27 @@ img{
     background-color: transparent;
     border:1px #fff solid;
 }
+
+.bg-primary,.btn-primary{
+    background-color: var(--primary-color);
+    color:#fff;
+}
+
+.bg-secondary, .btn-secondary{
+    background-color: var(--secondary-color);
+    color:#fff;
+}
+
+.bg-light, .btn-light{
+    background-color: var(--light-color);
+    color:#333;
+}
+
+.bg-dark ,.btn-dark{
+    background-color: var(--dark-color);
+    color:#fff;
+}
+
 
 .btn:hover{
     transform: scale(.95);
