--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,34 @@ img{
     grid-template-columns: 4fr 3fr;
 
 }
+
+/******************Languages*******************/
+.languages .flex{
+    flex-wrap: wrap;
+}
+.languages .card{
+    text-align:center;
+    margin:18px 10px 40px;
+    transition:transform 0.2s ease-in;
+}
+
+.languages .card h4{
+    font-size:20px;
+    margin-bottom:10px;
+}
+
+.languages .card:hover{
+    transform:translateY(-15px);
+}
+
+/***************Footer***********************/
+.footer a{
+    color:#fff;
+}
+
+.footer .social a{
+    margin:0 10px;
+}
 /***********Utilities*************************/
 .container{
     max-width: 1100px;
@@ -238,6 +266,25 @@ img{
     color:#fff;
 }
 
+.lead{
+    font-size:20px;
+}
+
+.sm{
+    font-size:1rem;
+}
+
+.md{
+    font-size:2rem;
+}
+
+.lg{
+    font-size:3rem;
+}
+
+.xl{
+    font-size:4rem;
+}
 
 .btn:hover{
     transform: scale(.95);
@@ -331,4 +378,48 @@ img{
 
 .p-5{
     padding: 4rem;
+}
+
+
+/******************Media Queries*****************/
+
+/**Tablets and under****/
+@media(max-width:768px){
+    .grid,
+    .showcase .grid,
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .showcase{
+        height:auto;
+    }
+
+    .showcase-text{
+        text-align:center;
+        margin-top:40px;
+    }
+    .showcase-form{
+        justify-self: center;
+        margin:auto;
+    }
+}
+
+/******Mobile**********/
+@media(max-width:500px){
+    .navbar{
+        height:110px;
+    }
+
+    .navbar .flex{
+        flex-direction:column;
+    }
+
+    .navbar ul{
+        padding:10px;
+        background-color: rgba(0,0,0,0.1);
+    }
 }
