--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,19 @@ img{
 .languages .card:hover{
     transform:translateY(-15px);
 }
+/*****************Features***************/
+.features-head{
+    text-align: center;
+}
+.features-head img{
+    width:350px;
+    justify-self:flex-end;
+}
+
+.features-main .card>i{
+    margin-right: 20px;
+}
+
 
 /***************Footer***********************/
 .footer a{
@@ -405,6 +418,11 @@ img{
     .showcase-form{
         justify-self: center;
         margin:auto;
+    }
+
+    .features-head img{
+        width:300px;
+        justify-self:center;
     }
 }
 
