Added skeleton of Docs page

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     --secondary-color:#1c3fa8;
     --dark-color:#002240;
     --light-color:#f4f4f4;
+    --sucess-color:#5cb85c;
+    --error-color:#d9534f;
 }
 
 
@@ -223,11 +225,23 @@ img{
     font-size:17px;
     padding-bottom:5px;
     margin-bottom:5px;
-    border-bottom:1px solid var(--secondary-color);
+    border-bottom:1px solid var(--primary-color);
 }
 
 .docs-main a:hover{
     font-weight:bold;
+}
+
+.alert{
+    background-color: var(--sucess-color);
+    color:#fff;
+    font-size:12px;
+    padding:10px 20px;
+    font-weight:bold;
+}
+
+.alert i{
+    margin-right:10px;
 }
 /***************Footer***********************/
 .footer a{
@@ -284,6 +298,12 @@ img{
 .btn-outline{
     background-color: transparent;
     border:1px #fff solid;
+}
+
+code,pre{
+    background-color: #333;
+    color:#fff;
+    padding:10px;
 }
 
 .bg-primary,.btn-primary{
@@ -429,7 +449,8 @@ img{
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid{
+    .cloud .grid,
+    .docs-main .grid{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
